--- a/.github/workflows/workfolio-ci.yml
+++ b/.github/workflows/workfolio-ci.yml
@@ -246,3 +246,77 @@ jobs:
           format: table
           severity: CRITICAL
           exit-code: 1
+
+  build-arachne-ui:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: recursive
+          ssh-key: ${{ secrets.SUBMODULE_SSH_KEY }}
+          ssh-strict: true
+      - name: Verify submodule checkout (arachne-ui)
+        run: |
+          git submodule status || true
+          git submodule sync --recursive
+          git submodule update --init --recursive
+          ls -la
+          ls -la services
+          ls -la services/arachne-ui
+          test -f services/arachne-ui/Dockerfile && echo "Found services/arachne-ui/Dockerfile" || (echo "Missing services/arachne-ui/Dockerfile" && exit 1)
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GHCR (main/master only)
+        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build arachne-ui image (local, PRs only)
+        if: github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master'
+        uses: docker/build-push-action@v5
+        with:
+          context: ./services/arachne-ui
+          load: true
+          push: false
+          tags: |
+            arachne-ui:ci
+
+      - name: Build and push arachne-ui image (GHCR, main/master only)
+        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+        uses: docker/build-push-action@v5
+        with:
+          context: ./services/arachne-ui
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository }}/arachne-ui:${{ github.sha }}
+            ghcr.io/${{ github.repository }}/arachne-ui:${{ github.ref_name }}
+            ghcr.io/${{ github.repository }}/arachne-ui:latest
+
+      - name: Scan arachne-ui image with Trivy (local)
+        if: github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master'
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          scan-type: image
+          image-ref: arachne-ui:ci
+          format: table
+          severity: CRITICAL
+          exit-code: 1
+
+      - name: Scan arachne-ui image with Trivy (remote)
+        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          scan-type: image
+          image-ref: ghcr.io/${{ github.repository }}/arachne-ui:${{ github.sha }}
+          format: table
+          severity: CRITICAL
+          exit-code: 1
