--- a/infrastructure/dev/docker-compose.dev.yml
+++ b/infrastructure/dev/docker-compose.dev.yml
@@ -3,8 +3,8 @@
 #
 # Run from: infrastructure/
 #
-# PREREQUISITE: Run `npm install` on the host for each JS service BEFORE starting.
-# The containers bind-mount your host code directly, including node_modules.
+# PREREQUISITE (now handled in-container): Containers install their own node_modules.
+# You no longer need host-installed node_modules, but you can keep them if you want.
 
 services:
   # AI Backend - Node.js with nodemon hot reload
@@ -23,7 +23,8 @@ services:
     volumes:
       - ../services/ai-backend:/app:rw
       - ../profile/profile.md:/app/profile/profile.md:ro
-    command: npm run dev
+      - ai-backend-node_modules:/app/node_modules
+    command: sh -c "npm install && npm run dev"
     ports:
       - "3001:3001"
 
@@ -39,7 +40,8 @@ services:
       - VITE_HMR_CLIENT_PORT=80
     volumes:
       - ../services/workfolio:/app:rw
-    command: npm run dev -- --host
+      - workfolio-node_modules:/app/node_modules
+    command: sh -c "npm install && npm run dev -- --host"
     ports:
       - "3000:3000"
 
@@ -86,7 +88,8 @@ services:
       - NEXT_PUBLIC_ARACHNE_API_URL=/api/arachne
     volumes:
       - ../services/arachne-ui:/app:rw
-    command: npm run dev -- --hostname 0.0.0.0 --port 3002
+      - arachne-ui-node_modules:/app/node_modules
+    command: sh -c "npm install && npm run dev -- --hostname 0.0.0.0 --port 3002"
     depends_on:
       - ai-backend
       - arachne
@@ -111,3 +114,8 @@ services:
       - ai-backend
       - arachne
       - arachne-ui
+
+volumes:
+  ai-backend-node_modules:
+  workfolio-node_modules:
+  arachne-ui-node_modules:
