updated dev nginx to proxy arachne UI static assets so the Geist font loads correctly

--- a/infrastructure/nginx/conf.d/default.conf
+++ b/infrastructure/nginx/conf.d/default.conf
@@ -32,6 +32,25 @@ server {
         proxy_cache off;
     }
 
+    # Arachne UI static assets (fonts, build output)
+    location /__nextjs_font/ {
+        proxy_pass http://arachne-ui:3002/__nextjs_font/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /_next/ {
+        proxy_pass http://arachne-ui:3002/_next/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # AI Backend API (strips /api/ai prefix)
     location /api/ai/ {
         rewrite ^/api/ai(/.*)$ $1 break;
