Fix prod nginx SSL paths, networking, and compose images

--- a/infrastructure/nginx/conf.d/default.conf
+++ b/infrastructure/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 # HTTP server for ACME challenges and redirects
 server {
     listen 80;
-    server_name _;
+    server_name kareemsasa.dev;
     
     # ACME Challenge for Let's Encrypt
     location /.well-known/acme-challenge/ {
@@ -19,13 +19,6 @@ server {
         deny all;
     }
 
-    # Health check endpoint for local container health (HTTP)
-    location = /health {
-        access_log off;
-        return 200 "healthy\n";
-        add_header Content-Type text/plain;
-    }
-
     # Redirect all other HTTP traffic to HTTPS
     location / {
         return 301 https://$server_name$request_uri;
@@ -36,11 +29,10 @@ server {
 server {
     listen 443 ssl;
     http2 on;
-    server_name _;
+    server_name kareemsasa.dev;
 
     # SSL Configuration
-    # Certs are stored under ./nginx/ssl on host and mounted to /etc/nginx/ssl in the container
-    ssl_certificate /etc/nginx/ssl/live/kareemsasa.dev/fullchain.pem;
+    ssl_certificate     /etc/nginx/ssl/live/kareemsasa.dev/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/kareemsasa.dev/privkey.pem;
     
     # SSL Security Settings
@@ -56,27 +48,6 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' https://challenges.cloudflare.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; connect-src 'self'; frame-src 'self' https://challenges.cloudflare.com; frame-ancestors 'self'; base-uri 'self'; form-action 'self'" always;
-
-    # Cache policy for static assets (hashed bundles)
-    location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|svg|webp|woff|woff2|ttf)$ {
-        add_header Cache-Control "public, max-age=31536000, immutable" always;
-        proxy_pass http://workfolio:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Ensure index.html is never cached
-    location = /index.html {
-        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0" always;
-        proxy_pass http://workfolio:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
 
     # Main portfolio (Workfolio)
     location / {
@@ -97,14 +68,13 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # CORS headers (same-origin by default)
-        add_header Access-Control-Allow-Origin $scheme://$host always;
-        add_header Vary Origin always;
+        # CORS headers
+        add_header Access-Control-Allow-Origin * always;
         add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
         add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
         
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin $scheme://$host;
+            add_header Access-Control-Allow-Origin *;
             add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
             add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization";
             add_header Access-Control-Max-Age 1728000;
@@ -124,14 +94,13 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # CORS headers (same-origin by default)
-        add_header Access-Control-Allow-Origin $scheme://$host always;
-        add_header Vary Origin always;
+        # CORS headers
+        add_header Access-Control-Allow-Origin * always;
         add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
         add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
         
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin $scheme://$host;
+            add_header Access-Control-Allow-Origin *;
             add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
             add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization";
             add_header Access-Control-Max-Age 1728000;
@@ -160,7 +129,7 @@ server {
     # }
 
     # Health check endpoint
-    location = /health {
+    location /health {
         access_log off;
         return 200 "healthy\n";
         add_header Content-Type text/plain;
