--- a/.github/actions/ssh-deploy/action.yml
+++ b/.github/actions/ssh-deploy/action.yml
@@ -104,8 +104,6 @@ runs:
         trap 'rm -rf "$DOCKER_CONFIG_DIR"' EXIT
 
         export WORKFOLIO_IMAGE=ghcr.io/${{ inputs.repository }}/workfolio:${{ inputs.sha }}
-        export AI_BACKEND_IMAGE=ghcr.io/${{ inputs.repository }}/ai-backend:${{ inputs.sha }}
-        export ARACHNE_IMAGE=ghcr.io/${{ inputs.repository }}/arachne:${{ inputs.sha }}
 
         # Note: rely on compose pull/up --pull always; no manual docker pull here
 
@@ -145,13 +143,6 @@ runs:
           echo "Found existing TLS certificate at $CERT_PATH_HOST"
         fi
 
-        # Ensure CPU limits are valid for the host (avoid errors on single-core hosts)
-        HOST_CPUS=$( (command -v nproc >/dev/null 2>&1 && nproc) || sysctl -n hw.ncpu 2>/dev/null || echo 1 )
-        if [ "$HOST_CPUS" -lt 2 ]; then
-          echo "Detected $HOST_CPUS CPU(s) on host; capping ARACHNE_CPU_LIMIT to 1.0 to avoid compose CPU limit errors" >&2
-          export ARACHNE_CPU_LIMIT="1.0"
-        fi
-
         docker network create portfolio-network-prod >/dev/null 2>&1 || true
         # Override to force images (and null-out any build) so server never builds locally
         cat > /tmp/compose.images.override.yml << 'IMG'
@@ -159,12 +150,6 @@ runs:
           workfolio:
             build: null
             image: ${WORKFOLIO_IMAGE}
-          ai-backend:
-            build: null
-            image: ${AI_BACKEND_IMAGE}
-          arachne:
-            build: null
-            image: ${ARACHNE_IMAGE}
         IMG
 
         cat > /tmp/compose.network.override.yml << 'OVR'
@@ -178,7 +163,7 @@ runs:
         # Bring stack down with same overrides to prevent name conflicts and stale containers
         $COMPOSE_CMD -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml -f /tmp/compose.images.override.yml -f /tmp/compose.network.override.yml down --remove-orphans || true
         # Extra safety: remove any lingering conflicting containers by explicit names
-        docker rm -f portfolio-redis-prod portfolio-workfolio-prod portfolio-ai-backend-prod portfolio-arachne-prod >/dev/null 2>&1 || true
+        docker rm -f portfolio-redis-prod portfolio-workfolio-prod >/dev/null 2>&1 || true
         # And remove any container matching portfolio-*-prod just in case
         CONFLICTING_CONTAINERS=$(docker ps -aq --filter name='^/portfolio-.*-prod$' || true)
         if [ -n "$CONFLICTING_CONTAINERS" ]; then
@@ -195,15 +180,13 @@ runs:
         for i in $(seq 1 60); do
           ok=0
           curl -fsS -m 5 "https://$DOMAIN_NAME_VALUE/health" >/dev/null 2>&1 && ok=$((ok+1)) || true
-          curl -fsS -m 5 "https://$DOMAIN_NAME_VALUE/api/ai/health" >/dev/null 2>&1 && ok=$((ok+1)) || true
-          curl -fsS -m 5 "https://$DOMAIN_NAME_VALUE/api/scrape/health" >/dev/null 2>&1 && ok=$((ok+1)) || true
-          if [ "$ok" -eq 3 ]; then
+          if [ "$ok" -eq 1 ]; then
             echo "All endpoints healthy."
             break
           fi
           sleep 5
         done
-        if [ "$ok" -ne 3 ]; then
+        if [ "$ok" -ne 1 ]; then
           echo "ERROR: One or more health checks failed at https://$DOMAIN_NAME_VALUE" >&2
           exit 1
         fi
