--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,9 +78,6 @@ jobs:
           ln -sf ../.env .env
           echo "\$GHCR_TOKEN" | docker login ghcr.io -u "\$GHCR_USERNAME" --password-stdin
           export WORKFOLIO_IMAGE=ghcr.io/\${REPO}/workfolio:\${SHA}
-          export AI_BACKEND_IMAGE=ghcr.io/\${REPO}/ai-backend:\${SHA}
-          export ARACHNE_IMAGE=ghcr.io/\${REPO}/arachne:\${SHA}
-          export ARACHNE_CPU_LIMIT=1.0
           # Ensure external prod network exists (idempotent)
           docker network create portfolio-network-prod >/dev/null 2>&1 || true
           # Bring down current prod stack (if any) to avoid port/cpu conflicts
@@ -97,7 +94,7 @@ jobs:
           # Ensure external prod network exists (again) right before up
           docker network create portfolio-network-prod >/dev/null 2>&1 || true
           # Bring up services with fresh images, remove orphans, and force recreate (app + monitoring)
-          docker compose --env-file ../.env -f docker-compose.prod.yml -f docker-compose.monitoring.prod.yml up -d --pull always --remove-orphans --force-recreate nginx workfolio ai-backend arachne prometheus grafana grafana-admin node-exporter nginx-exporter redis-exporter
+          docker compose --env-file ../.env -f docker-compose.prod.yml -f docker-compose.monitoring.prod.yml up -d --pull always --remove-orphans --force-recreate nginx workfolio prometheus grafana grafana-admin node-exporter nginx-exporter redis-exporter
           EOSSH
 
       - name: Verify monitoring health (via SSH)
@@ -118,11 +115,9 @@ jobs:
           for i in {1..60}; do
             ok=0
             curl -fsS -m 5 "https://$DOMAIN/health" >/dev/null && ok=$((ok+1)) || true
-            curl -fsS -m 5 "https://$DOMAIN/api/ai/health" >/dev/null && ok=$((ok+1)) || true
-            curl -fsS -m 5 "https://$DOMAIN/api/arachne/health" >/dev/null && ok=$((ok+1)) || true
             # Grafana proxied under subpath
             curl -fsS -m 5 "https://$DOMAIN/monitoring/grafana/api/health" >/dev/null && ok=$((ok+1)) || true
-            if [ "$ok" -eq 4 ]; then
+            if [ "$ok" -eq 2 ]; then
               echo "All endpoints healthy."
               exit 0
             fi
