--- a/infrastructure/docker-compose.cicd.yml
+++ b/infrastructure/docker-compose.cicd.yml
@@ -16,8 +16,6 @@ services:
       - ./nginx/conf.d/default.conf.template:/tmp/default.conf.template:ro
     depends_on:
       - workfolio
-      - ai-backend
-      - arachne
     restart: unless-stopped
     command: >
       /bin/sh -c "sed 's/__DOMAIN_NAME__/'\"$DOMAIN_NAME\"'/g' /tmp/default.conf.template > /tmp/default.conf && nginx -g 'daemon off;'"
@@ -30,83 +28,11 @@ services:
     container_name: portfolio-workfolio
     environment:
       - NODE_ENV=${WORKFOLIO_NODE_ENV:-production}
-      - VITE_AI_BACKEND_URL=${VITE_AI_BACKEND_URL:-/api/ai}
     restart: unless-stopped
     networks:
       - ${DOCKER_NETWORK_NAME:-portfolio-network}
 
-  # AI Backend - AI microservice
-  ai-backend:
-    image: ${AI_BACKEND_IMAGE:-ghcr.io/your-username/personal-website/ai-backend:latest}
-    container_name: portfolio-ai-backend
-    environment:
-      - NODE_ENV=${AI_BACKEND_NODE_ENV:-production}
-      - PORT=${AI_BACKEND_PORT:-3001}
-      - GEMINI_API_KEY=${GEMINI_API_KEY}
-      - LOG_LEVEL=${AI_BACKEND_LOG_LEVEL:-info}
-      - ENABLE_METRICS=${AI_BACKEND_ENABLE_METRICS:-true}
-      - RATE_LIMIT_WINDOW_MS=${AI_BACKEND_RATE_LIMIT_WINDOW_MS:-900000}
-      - RATE_LIMIT_MAX_REQUESTS=${AI_BACKEND_RATE_LIMIT_MAX_REQUESTS:-100}
-      - ARACHNE_URL=${ARACHNE_URL:-http://arachne:8080}
-      - ARACHNE_API_TOKEN=${ARACHNE_API_TOKEN:-}
-      - PROFILE_CONTEXT_PATH=/app/profile/profile.md
-    restart: unless-stopped
-    networks:
-      - ${DOCKER_NETWORK_NAME:-portfolio-network}
-    healthcheck:
-      test:
-        [
-          "CMD",
-          "wget",
-          "--no-verbose",
-          "--tries=1",
-          "--spider",
-          "http://localhost:3001/health",
-        ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-
-  # Arachne - Web scraping service
-  arachne:
-    image: ${ARACHNE_IMAGE:-ghcr.io/your-username/personal-website/arachne:latest}
-    container_name: portfolio-arachne
-    environment:
-      - SCRAPER_REDIS_ADDR=${ARACHNE_REDIS_ADDR:-redis:6379}
-      - SCRAPER_REDIS_DB=${ARACHNE_REDIS_DB:-0}
-      - SCRAPER_ENABLE_METRICS=${ARACHNE_ENABLE_METRICS:-true}
-      - SCRAPER_ENABLE_LOGGING=${ARACHNE_ENABLE_LOGGING:-true}
-      - SCRAPER_LOG_LEVEL=${ARACHNE_LOG_LEVEL:-info}
-      - SCRAPER_MAX_CONCURRENT=${ARACHNE_MAX_CONCURRENT:-5}
-      - SCRAPER_REQUEST_TIMEOUT=${ARACHNE_REQUEST_TIMEOUT:-120s}
-      - SCRAPER_TOTAL_TIMEOUT=${ARACHNE_TOTAL_TIMEOUT:-180s}
-      - SCRAPER_USE_HEADLESS=${ARACHNE_USE_HEADLESS:-true}
-      - SCRAPER_USER_AGENT=${ARACHNE_USER_AGENT:-Mozilla/5.0 (compatible; PortfolioBot/1.0)}
-      - SCRAPER_RATE_LIMIT=${ARACHNE_RATE_LIMIT:-2}
-      - SCRAPER_RATE_LIMIT_WINDOW=${ARACHNE_RATE_LIMIT_WINDOW:-1s}
-    depends_on:
-      redis:
-        condition: service_healthy
-    restart: unless-stopped
-    networks:
-      - ${DOCKER_NETWORK_NAME:-portfolio-network}
-    healthcheck:
-      test:
-        [
-          "CMD",
-          "wget",
-          "--no-verbose",
-          "--tries=1",
-          "--spider",
-          "http://localhost:8080/health",
-        ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-
-  # Redis - Required by Arachne for job storage
+  # Redis - Optional shared cache
   redis:
     image: redis:7-alpine
     container_name: portfolio-redis
