--- a/infrastructure/dev/docker-compose.dev.yml
+++ b/infrastructure/dev/docker-compose.dev.yml
@@ -18,13 +18,13 @@ services:
   redis-commander:
     profiles: ["monitoring"]
 
-  # Nginx - Always running in development mode
+  # Nginx - Always running in development mode (HTTP-only, no SSL)
   nginx:
     container_name: portfolio-nginx-dev
     image: nginx:alpine
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d/default.dev.conf:/etc/nginx/conf.d/default.conf:ro
+      - ../nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ../nginx/conf.d/default.local.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
       - "${NGINX_HTTP_PORT:-80}:80"
     depends_on:
