Fix deploy action env passing and add monitoring health checks

--- a/.github/actions/ssh-deploy/action.yml
+++ b/.github/actions/ssh-deploy/action.yml
@@ -91,19 +91,27 @@ runs:
         fi
 
         # Prepare remote script once, then stream it to SSH (allows retries)
+        # Use single-quoted heredoc so shell vars like $HOME, $DOMAIN_NAME expand on remote side
         cat > /tmp/remote_deploy.sh << 'RSCRIPT'
-        set -e
+        set -euo pipefail
         cd "$HOME/personal-website"
+
+        # Validate required environment variables are present
+        : "${GHCR_TOKEN:?missing GHCR_TOKEN}"
+        : "${GHCR_USERNAME:?missing GHCR_USERNAME}"
+        : "${REPO:?missing REPO}"
+        : "${SHA:?missing SHA}"
 
         echo "Disk usage before cleanup:" && df -h /
         echo "Docker disk usage before cleanup:" && docker system df || true
 
         DOCKER_CONFIG_DIR="$(mktemp -d -t docker-config-XXXXXX 2>/dev/null || echo /tmp/docker-config)"
         export DOCKER_CONFIG="$DOCKER_CONFIG_DIR"
-        echo "${{ inputs.ghcr_token }}" | docker login ghcr.io -u "${{ inputs.ghcr_username }}" --password-stdin
+        # Use environment variables passed from SSH command
+        echo "$GHCR_TOKEN" | docker login ghcr.io -u "$GHCR_USERNAME" --password-stdin
         trap 'rm -rf "$DOCKER_CONFIG_DIR"' EXIT
 
-        export WORKFOLIO_IMAGE=ghcr.io/${{ inputs.repository }}/workfolio:${{ inputs.sha }}
+        export WORKFOLIO_IMAGE=ghcr.io/$REPO/workfolio:$SHA
 
         # Note: rely on compose pull/up --pull always; no manual docker pull here
 
@@ -161,7 +169,7 @@ runs:
 
         if command -v docker-compose >/dev/null 2>&1; then COMPOSE_CMD="docker-compose"; else COMPOSE_CMD="docker compose"; fi
         # Bring stack down with same overrides to prevent name conflicts and stale containers
-        $COMPOSE_CMD -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml -f /tmp/compose.images.override.yml -f /tmp/compose.network.override.yml down --remove-orphans || true
+        $COMPOSE_CMD -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml -f infrastructure/prod/docker-compose.monitoring.prod.yml -f /tmp/compose.images.override.yml -f /tmp/compose.network.override.yml down --remove-orphans || true
         # Extra safety: remove any lingering conflicting containers by explicit names
         docker rm -f portfolio-redis-prod portfolio-workfolio-prod >/dev/null 2>&1 || true
         # And remove any container matching portfolio-*-prod just in case
@@ -172,22 +180,38 @@ runs:
         fi
         # Small wait to ensure Docker releases names
         sleep 2
-        $COMPOSE_CMD -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml -f /tmp/compose.images.override.yml -f /tmp/compose.network.override.yml pull || true
-        $COMPOSE_CMD -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml -f /tmp/compose.images.override.yml -f /tmp/compose.network.override.yml up -d --no-build --pull always
-        $COMPOSE_CMD -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml -f /tmp/compose.images.override.yml -f /tmp/compose.network.override.yml ps
+        $COMPOSE_CMD -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml -f infrastructure/prod/docker-compose.monitoring.prod.yml -f /tmp/compose.images.override.yml -f /tmp/compose.network.override.yml pull || true
+        $COMPOSE_CMD -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml -f infrastructure/prod/docker-compose.monitoring.prod.yml -f /tmp/compose.images.override.yml -f /tmp/compose.network.override.yml up -d --no-build --pull always
+        $COMPOSE_CMD -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml -f infrastructure/prod/docker-compose.monitoring.prod.yml -f /tmp/compose.images.override.yml -f /tmp/compose.network.override.yml ps
 
         echo "Waiting for service health (domain: $DOMAIN_NAME_VALUE) ..."
         for i in $(seq 1 60); do
           ok=0
           curl -fsS -m 5 "https://$DOMAIN_NAME_VALUE/health" >/dev/null 2>&1 && ok=$((ok+1)) || true
           if [ "$ok" -eq 1 ]; then
-            echo "All endpoints healthy."
+            echo "Main site endpoint healthy."
             break
           fi
           sleep 5
         done
         if [ "$ok" -ne 1 ]; then
-          echo "ERROR: One or more health checks failed at https://$DOMAIN_NAME_VALUE" >&2
+          echo "ERROR: Main site health check failed at https://$DOMAIN_NAME_VALUE" >&2
+          exit 1
+        fi
+
+        echo "Waiting for monitoring services to become healthy..."
+        for i in $(seq 1 60); do
+          ok=0
+          curl -fsS -m 5 http://localhost:9090/-/healthy >/dev/null 2>&1 && ok=$((ok+1)) || true
+          curl -fsS -m 5 http://localhost:3000/api/health >/dev/null 2>&1 && ok=$((ok+1)) || true
+          if [ "$ok" -eq 2 ]; then
+            echo "Monitoring services healthy (Prometheus and Grafana)."
+            break
+          fi
+          sleep 5
+        done
+        if [ "$ok" -ne 2 ]; then
+          echo "ERROR: Monitoring health checks failed (Prometheus or Grafana)" >&2
           exit 1
         fi
 
@@ -203,10 +227,18 @@ runs:
 
         SSH_OPTS="-i ~/.ssh/id_ed25519 -o IdentitiesOnly=yes -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ConnectTimeout=60 -o ConnectionAttempts=3 -o ServerAliveInterval=15 -o ServerAliveCountMax=4 -o PreferredAuthentications=publickey -o PubkeyAuthentication=yes -o IPQoS=none"
 
+        # Pass environment variables to remote script via SSH
+        # These will be available as $GHCR_TOKEN, $GHCR_USERNAME, $REPO, $SHA in the remote script
+        # Use double quotes so GitHub Actions substitutions are properly passed to bash
         success=""
         for attempt in 1 2 3; do
           echo "SSH attempt $attempt..."
-          if ssh -T $SSH_OPTS -p "$PORT" "$USER@$HOST" bash -s < /tmp/remote_deploy.sh; then
+          if ssh -T $SSH_OPTS -p "$PORT" "$USER@$HOST" \
+            GHCR_TOKEN="${{ inputs.ghcr_token }}" \
+            GHCR_USERNAME="${{ inputs.ghcr_username }}" \
+            REPO="${{ inputs.repository }}" \
+            SHA="${{ inputs.sha }}" \
+            bash -s < /tmp/remote_deploy.sh; then
             success="yes"; break
           fi
           echo "SSH attempt $attempt failed. Retrying in 15s..."
@@ -219,8 +251,11 @@ runs:
           if command -v nc >/dev/null 2>&1; then
             nc -v -w 5 "$HOST" "$PORT" </dev/null || true
           fi
-          ssh -vvv -T $SSH_OPTS -p "$PORT" "$USER@$HOST" bash -s < /tmp/remote_deploy.sh || true
+          ssh -vvv -T $SSH_OPTS -p "$PORT" "$USER@$HOST" \
+            GHCR_TOKEN="${{ inputs.ghcr_token }}" \
+            GHCR_USERNAME="${{ inputs.ghcr_username }}" \
+            REPO="${{ inputs.repository }}" \
+            SHA="${{ inputs.sha }}" \
+            bash -s < /tmp/remote_deploy.sh || true
           exit 1
         fi
-
-
