--- a/.github/actions/ssh-deploy/action.yml
+++ b/.github/actions/ssh-deploy/action.yml
@@ -65,9 +65,11 @@ runs:
         USER=$(printf "%s" "$USER_RAW" | tr -d ' \t\r\n')
         PORT=$(printf "%s" "$PORT_RAW" | tr -d ' \t\r\n')
         if [ -z "$PORT" ]; then PORT=22; fi
-        SSH_OPTS="-i ~/.ssh/id_ed25519 -o IdentitiesOnly=yes -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ConnectTimeout=60 -o ConnectionAttempts=3 -o ServerAliveInterval=15 -o ServerAliveCountMax=4 -o PreferredAuthentications=publickey -o PubkeyAuthentication=yes -o IPQoS=none"
-        echo "Syncing infrastructure/ to server..."
-        tar -czf - infrastructure | ssh $SSH_OPTS -p "$PORT" "$USER@$HOST" "mkdir -p ~/personal-website && tar -xzf - -C ~/personal-website"
+        SSH_OPTS="-4 -i ~/.ssh/id_ed25519 -o IdentitiesOnly=yes -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ConnectTimeout=60 -o ConnectionAttempts=3 -o ServerAliveInterval=15 -o ServerAliveCountMax=4 -o PreferredAuthentications=publickey -o PubkeyAuthentication=yes -o IPQoS=none"
+        echo "Syncing infrastructure/, monitoring/, nginx/ to server..."
+        tar -czf - infrastructure monitoring nginx | \
+          ssh $SSH_OPTS -p "$PORT" "$USER@$HOST" \
+          "mkdir -p ~/personal-website && tar -xzf - -C ~/personal-website"
 
     - name: Deploy over SSH
       shell: bash
