--- a/infrastructure/dev/docker-compose.dev.yml
+++ b/infrastructure/dev/docker-compose.dev.yml
@@ -23,8 +23,8 @@ services:
     container_name: portfolio-nginx-dev
     image: nginx:alpine
     volumes:
-      - ../nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ../nginx/conf.d/default.local.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./infrastructure/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./infrastructure/nginx/conf.d/default.local.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
       - "${NGINX_HTTP_PORT:-80}:80"
     depends_on:
