--- a/infrastructure/prod/docker-compose.cicd.yml
+++ b/infrastructure/prod/docker-compose.cicd.yml
@@ -4,8 +4,8 @@ services:
     image: certbot/certbot:latest
     container_name: portfolio-certbot
     volumes:
-      - ./nginx/ssl:/etc/letsencrypt
-      - ./nginx/certbot/www:/var/www/certbot
+      - ./infrastructure/nginx/ssl:/etc/letsencrypt
+      - ./infrastructure/nginx/certbot/www:/var/www/certbot
       - ./logs/certbot:/var/log/letsencrypt
     command: certonly --webroot --webroot-path=/var/www/certbot --email ${SSL_EMAIL} --agree-tos --no-eff-email --force-renewal -d ${DOMAIN_NAME}
     profiles:
@@ -24,11 +24,11 @@ services:
       - "${NGINX_HTTP_PORT:-80}:80"
       - "${NGINX_HTTPS_PORT:-443}:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/ssl:/etc/letsencrypt:ro
-      - ./nginx/certbot/www:/var/www/certbot:ro
+      - ./infrastructure/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./infrastructure/nginx/ssl:/etc/letsencrypt:ro
+      - ./infrastructure/nginx/certbot/www:/var/www/certbot:ro
       - ./logs/nginx:/var/log/nginx
-      - ./nginx/conf.d/default.conf.template:/tmp/default.conf.template:ro
+      - ./infrastructure/nginx/conf.d/default.conf.template:/tmp/default.conf.template:ro
     depends_on:
       workfolio:
         condition: service_healthy
