--- a/infrastructure/prod/docker-compose.prod.yml
+++ b/infrastructure/prod/docker-compose.prod.yml
@@ -4,8 +4,8 @@ services:
     image: certbot/certbot:latest
     container_name: portfolio-certbot
     volumes:
-      - ./nginx/ssl:/etc/letsencrypt
-      - ./nginx/certbot/www:/var/www/certbot
+      - ./infrastructure/nginx/ssl:/etc/letsencrypt
+      - ./infrastructure/nginx/certbot/www:/var/www/certbot
       - ./logs/certbot:/var/log/letsencrypt
     command: certonly --webroot --webroot-path=/var/www/certbot --email ${SSL_EMAIL} --agree-tos --no-eff-email --force-renewal -d ${DOMAIN_NAME}
     profiles:
@@ -22,10 +22,10 @@ services:
       - "${NGINX_HTTP_PORT:-80}:80"
       - "${NGINX_HTTPS_PORT:-443}:443"
     volumes:
-      - ../nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ../nginx/conf.d:/etc/nginx/conf.d:ro
-      - ../nginx/ssl:/etc/nginx/ssl:ro
-      - ../nginx/certbot/www:/var/www/certbot:ro
+      - ./infrastructure/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./infrastructure/nginx/conf.d:/etc/nginx/conf.d:ro
+      - ./infrastructure/nginx/ssl:/etc/nginx/ssl:ro
+      - ./infrastructure/nginx/certbot/www:/var/www/certbot:ro
       - ./logs/nginx:/var/log/nginx
     depends_on:
       workfolio:
