--- a/infrastructure/docker-compose.cicd.yml
+++ b/infrastructure/docker-compose.cicd.yml
@@ -9,11 +9,11 @@ services:
       - "${NGINX_HTTP_PORT:-80}:80"
       - "${NGINX_HTTPS_PORT:-443}:443"
     volumes:
-      - ./infrastructure/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./infrastructure/nginx/ssl:/etc/letsencrypt:ro
-      - ./infrastructure/nginx/certbot/www:/var/www/certbot:ro
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/ssl:/etc/letsencrypt:ro
+      - ./nginx/certbot/www:/var/www/certbot:ro
       - ./logs/nginx:/var/log/nginx
-      - ./infrastructure/nginx/conf.d/default.conf.template:/tmp/default.conf.template:ro
+      - ./nginx/conf.d/default.conf.template:/tmp/default.conf.template:ro
     depends_on:
       - workfolio
     restart: unless-stopped
